--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
             <div class="skills__skill">GIT</div>
             <div class="skills__skill">C</div>
             <div class="skills__skill">C++</div>
-            <div class="skills__skill">React</div>
+            <!-- <div class="skills__skill">React</div> -->
             <div class="skills__skill">JavaScript</div>
             <div class="skills__skill">MongoDB</div>
             <div class="skills__skill">Figma</div>
-            <div class="skills__skill">Node.js</div>
-            <div class="skills__skill">Tailwind CSS</div>
+            <!-- <div class="skills__skill">Node.js</div> -->
+            <!-- <div class="skills__skill">Tailwind CSS</div> -->
 
           </div>
         </div>
@@ -184,7 +184,7 @@
             <p class="projects__row-content-desc">
               "Generate strong and secure passwords in a snap with our random password generator."
             </p>
-            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr" >Case Study</a>
+            <a href="./project-1.html" class="btn btn--med btn--theme dynamicBgClr">Case Study</a>
           </div>
         </div>
         <div class="projects__row">
@@ -193,11 +193,12 @@
               loading="lazy" />
           </div>
           <div class="projects__row-content">
-            <h3 class="projects__row-content-title">Simple Weather App</h3>
+            <h3 class="projects__row-content-title">Advance Weather App</h3>
             <p class="projects__row-content-desc">
-              "Get up-to-date weather forecasts at your fingertips with our simple and intuitive weather app."
+              ""Stay ahead of the weather with our advanced app featuring real-time updates, detailed forecasts, and
+              personalized alerts.""
             </p>
-            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr" >Case Study</a>
+            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr">Case Study</a>
           </div>
         </div>
         <div class="projects__row">
@@ -225,7 +226,8 @@
         </span>
       </h2>
       <div class="contact__form-container">
-        <form action="https://formsubmit.co/businessmail.uzair@gmail.com" method="POST" class="contact__form" target="_blank">
+        <form action="https://formsubmit.co/businessmail.uzair@gmail.com" method="POST" class="contact__form"
+          target="_blank">
           <div class="contact__form-field">
             <label class="contact__form-label" for="name">Name</label>
             <input required placeholder="Enter Your Name" type="text" class="contact__form-input" name="name"
