--- a/project-2.html
+++ b/project-2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Case Study of Simple Weather App</title>
+  <title>Case Study of Advance Weather App</title>
   <meta name="description" content="Case Study of Simple Weather App" />
   <link rel="shortcut icon" href="assets/png/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="css/style.css" />
@@ -74,14 +74,15 @@
   </header>
   <section class="project-cs-hero">
     <div class="project-cs-hero__content">
-      <h1 class="heading-primary">Simple Weather App</h1>
+      <h1 class="heading-primary">Advance Weather App</h1>
       <div class="project-cs-hero__info">
         <p class="text-primary">
-          "Get up-to-date weather forecasts at your fingertips with our simple and intuitive weather app."
+          "Stay ahead of the weather with our advanced app featuring real-time updates, detailed forecasts, and
+          personalized alerts."
         </p>
       </div>
       <div class="project-cs-hero__cta">
-        <a href="https://simple-weather-app-by-meer.netlify.app/" class="btn btn--bg" target="_blank">Live Link</a>
+        <a href="https://advance-weather-app-by-meer.netlify.app/" class="btn btn--bg" target="_blank">Live Link</a>
       </div>
     </div>
   </section>
@@ -95,13 +96,15 @@
           <div class="project-details__desc">
             <h3 class="project-details__content-title">Project Overview</h3>
             <p class="project-details__desc-para">
-              A simple weather app is a software application that displays current weather conditions and forecast
-              information for a specific location. The app can be designed for desktop or mobile devices and provides
-              users with an easy and convenient way to check the weather.
+              The goal of this project is to develop an advanced weather application that provides users with real-time
+              weather information, detailed forecasts, and personalized alerts. The app will utilize a variety of
+              weather data sources, including satellite imagery, radar data, and weather models, to provide accurate and
+              up-to-date information.
             </p>
             <p class="project-details__desc-para">
-              The objective of this project is to create a simple weather app that displays the current weather
-              conditions and forecast information for a user's location or a location specified by the user.
+              The weather app will have a user-friendly interface that allows users to easily access the information
+              they need. The app will also feature interactive maps, graphs, and charts to help users better understand
+              the weather conditions.
             </p>
           </div>
           <div class="project-details__tools-used">
@@ -117,8 +120,10 @@
           </div>
           <div class="project-details__links">
             <h3 class="project-details__content-title">See Live</h3>
-            <a href="https://simple-weather-app-by-meer.netlify.app/" class="btn btn--med btn--theme project-details__links-btn" target="_blank">Live Link</a>
-            <a href="https://github.com/MeerUzairWasHere/Simple-Weather-App" class="btn btn--med btn--theme-inv project-details__links-btn" target="_blank">Code Link</a>
+            <a href="https://advance-weather-app-by-meer.netlify.app/"
+              class="btn btn--med btn--theme project-details__links-btn" target="_blank">Live Link</a>
+            <a href="https://github.com/MeerUzairWasHere/AdvanceWeatherApp.git"
+              class="btn btn--med btn--theme-inv project-details__links-btn" target="_blank">Code Link</a>
           </div>
         </div>
       </div>
