--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
           <div class="projects__row-content">
             <h3 class="projects__row-content-title">Advance Weather App</h3>
             <p class="projects__row-content-desc">
-              ""Stay ahead of the weather with our advanced app featuring real-time updates, detailed forecasts, and
-              personalized alerts.""
+              "Stay ahead of the weather with our advanced app featuring real-time updates, detailed forecasts, and
+              personalized alerts."
             </p>
             <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr">Case Study</a>
           </div>
